--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Test Index</title>
+  <title>Project 1 Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./resets.css">
+  <link rel="stylesheet" href="./index_styles.css">
+  <link rel="stylesheet" href="./fonts.css">
+  <link rel="stylesheet" href="https://use.typekit.net/ddn2pjc.css">
 </head>
 
 <body>
-    <h1>Test</h1>
+  <div class="background">
+    <img class="background-img" src="./Assets/Gradient-1@2x.png">
+  </div>
+  <main>
+    <div class="column-1">
+      <h1>
+        Due in ...
+      </h1>
+      <div class="rule"></div>
+    </div>
+    
+    <div class="column-2">
+
+      <ul class="time-scroll-y">
+        <li class="time-3">23:59</li>
+        <li class="time-1">08:45</li>
+        <li class="time-2">14:30</li>
+        <!-- Break -->
+        <li class="time-3">23:59</li>
+        <li class="time-1">08:45</li>
+        <li class="time-2">14:30</li>
+        <!-- Break -->
+        <li class="time-3">23:59</li>
+        <li class="time-1">08:45</li>
+        <li class="time-2">14:30</li>
+        <!-- Break -->
+        <li class="time-3">23:59</li>
+        <li class="time-1">08:45</li>
+        <li class="time-2">14:30</li>
+      </ul>
+
+      <div class="time-scroll-x">
+        <div class="scroll-element-1">
+          <span class="time-3">23:59</span>
+          <span class="time-1">08:45</span>
+          <span class="time-2">14:30</span>
+        </div>
+        <div class="scroll-element-2">
+          <span class="time-3">23:59</span>
+          <span class="time-1">08:45</span>
+          <span class="time-2">14:30</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="column-3">
+      <div class="container">
+        <a class="button" href="./map.html">
+          <p class="button-title">Take a Breather</p>
+          <div class="rule"></div>
+          <p class="button-subtitle">Go on a walk</p>
+        </a>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
