--- a/ebay.html
+++ b/ebay.html
@@ -5,8 +5,8 @@
     <title>Project 1 Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/ddn2pjc.css">
-    <link rel="stylesheet" href="/resets.css">
-    <link rel="stylesheet" href="/ebay_styles.css">
+    <link rel="stylesheet" href="./resets.css">
+    <link rel="stylesheet" href="./ebay_styles.css">
     <script defer src="scripts.js"></script>
 </head>
 
