--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel="stylesheet" href="./index_styles.css">
   <link rel="stylesheet" href="./fonts.css">
   <link rel="stylesheet" href="https://use.typekit.net/ddn2pjc.css">
+  <script defer src="scripts.js"></script>
 </head>
 
 <body>
   <div class="background">
     <img class="background-img" src="./Assets/Gradient-1@2x.png">
   </div>
-  <main>
+  <main class="fade">
     <div class="column-1">
       <h1>
         Due in ...
