--- a/end-page.html
+++ b/end-page.html
@@ -8,13 +8,15 @@
   <link rel="stylesheet" href="./end-page_styles.css">
   <link rel="stylesheet" href="./fonts.css">
   <link rel="stylesheet" href="https://use.typekit.net/ddn2pjc.css">
+  <script defer src="scripts.js"></script>
+
 </head>
 
 <body>
   <div class="background">
     <img class="background-img" src="./Assets/Gradient-3@2x.png">
   </div>
-  <main>
+  <main class="fade">
     <div class="column-1">
       <div class="container">
       <div class="wrapper">
