--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
   </div>
   <main class="fade">
     <div class="column-1">
-      <h1>
-        Due in ...
-      </h1>
-      <div class="rule"></div>
+      <div class="container">
+        <div class="wrapper">
+          <h1>
+            Due in ...
+          </h1>
+          <div class="rule"></div>
+        </div>
+      </div>
     </div>
-    
+
     <div class="column-2">
 
       <ul class="time-scroll-y">
