added story element

--- a/ebay.html
+++ b/ebay.html
@@ -20,7 +20,7 @@
                 <h1>You enter the store.</h1>
                 <div class="rule"></div>
                 <p>You Picked up an old alarm clock and winded it up. The gears had trouble turning and you could feel the metal scraping on the inside. Deciding it wasn't worth you while you place the clock back on the shelf, but then, all of the sudden...</p>
-                <a class="button" href="./end-page.html">
+                <a class="button" href="./youtube.html">
                     <div class="rule"></div>
                     <p class="button-title">Turn Around!</p>
                 </a>
